@startuml

title __GETREQUEST's Class Diagram__\n

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.getRequest {
        class GetAllAirports {
            + GetAllAirports()
            + makeRequest()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.getRequest {
        class GetAllFlights {
            + GetAllFlights()
            + makeRequest()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.getRequest {
        class GetBookingByID {
            - id : int
            + GetBookingByID()
            + makeRequest()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.getRequest {
        class GetDiscountsByFlightID {
            - id : int
            + GetDiscountsByFlightID()
            + makeRequest()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.getRequest {
        class GetFlightsByDepartureAirport {
            - id : int
            + GetFlightsByDepartureAirport()
            + makeRequest()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.getRequest {
        class GetHotelsByAirportID {
            - id : int
            + GetHotelsByAirportID()
            + makeRequest()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.getRequest {
        abstract class GetRequestHandler {
            # apiProperties : Properties
            # apiResponse : JSONObject
            # GetRequestHandler()
            + getApiResponseResults()
            + getApiResponseKeys()
        }
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      package backgroundServices.API_Handlers.apiRequests.getRequest {
        class GetUserInformation {
            - username : String
            - password : String
            + GetUserInformation()
            + makeRequest()
        }
      }
    }
  }
  

  GetAllAirports -up-|> GetRequestHandler
  GetAllFlights -up-|> GetRequestHandler
  GetBookingByID -up-|> GetRequestHandler
  GetDiscountsByFlightID -up-|> GetRequestHandler
  GetFlightsByDepartureAirport -up-|> GetRequestHandler
  GetHotelsByAirportID -up-|> GetRequestHandler
  GetRequestHandler -up-|> Request
  GetRequestHandler o-- Reader : myReader
  GetUserInformation -up-|> GetRequestHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
